# Ultima-Robotics-Stack

./: .gitignore
ur-licence-mann/: CMakeLists.txt  Makefile
ur-licence-mann/cmake/: CMakeLists.txt  device_config.h.in
ur-licence-mann/config/: license_definitions.enc  license_definitions.json  package_config.json  ur-rpc-config.json
ur-licence-mann/config/example/: example_operation_generate.json  example_operation_verify.json
ur-licence-mann/docs/: README.md  SECURITY_BEST_PRACTICES.md
ur-licence-mann/keys/: encryption_keys.json  private_key.pem  public_key.pem
ur-licence-mann/licenses/: system.lic
ur-licence-mann/shared-library/: CMakeLists.txt  README.md
ur-licence-mann/shared-library/examples/: client_example.cpp
ur-licence-mann/shared-library/include/: operation_types.hpp
ur-licence-mann/shared-library/src/: operation_types.cpp
ur-licence-mann/src/: config_manager.cpp  config_manager.hpp  crypto_utils.cpp  crypto_utils.hpp  feature_manager.cpp  feature_manager.hpp  file_watchdog.cpp  file_watchdog.hpp  hardware_fingerprint.cpp  hardware_fingerprint.hpp  init_manager.cpp  init_manager.hpp  license_manager.cpp  license_manager.hpp  license_types.hpp  main.cpp  operation_handler.cpp  operation_handler.hpp  package_config.hpp  path_validator.hpp  rpc_client.cpp  rpc_client.hpp  rpc_operation_processor.cpp  rpc_operation_processor.hpp  startup_manager.cpp  startup_manager.hpp
ur-licence-mann/tests/: README.md  README_RPC_TESTS.md  requirements.txt  rpc_test_base.py  test_auto_encrypt_definitions.sh  test_builtin_encryption.sh  test_encryption.sh  test_force_encryption.sh  test_generate.sh  test_get_info.sh  test_get_plan.sh  test_hardware_binding.sh  test_init.sh  test_rpc_all.py  test_rpc_generate.py  test_rpc_get_definitions.py  test_rpc_get_info.py  test_rpc_get_plan.py  test_rpc_update.py  test_rpc_update_definitions.py  test_rpc_verify.py  test_runner.sh  test_update.sh  test_update_license_type.sh  test_update_with_encryption.sh  test_verify.sh
ur-licence-mann/tests/keys/: encryption_keys.json  private_key.pem  public_key.pem
ur-licence-mann/tests/output/: auto_encrypt_pkg_config.json  builtin_encrypt_config.json  encrypted_license.lic  encrypted_license.lic.enc  force_gen_config.json  force_info_config.json  force_verify_config.json  gen_for_update_config.json  get_defs_config.json  hw_bound_license.lic  test_definitions.enc  (+10 more)
ur-mavlink-stack/ur-mavcollector-v1.1/: CMakeLists.txt  Makefile  config.json  mav_stats.json
ur-mavlink-stack/ur-mavdiscovery-v1.1/: CMakeLists.txt  Makefile  README.md  USAGE.md  current-runtime-device.json  rpc-config.json  test_cron_job_data.sh  test_rpc_topics.sh  test_usb_tracking.sh
ur-mavlink-stack/ur-mavsdk-collector-v1.0/: CMakeLists.txt  Makefile
ur-netbench-mann/: CMakeLists.txt  Makefile
ur-netbench-mann/configs/: package_config.json  rpc-config.json
ur-netbench-mann/include/: CLIUtils.hpp  ConfigManager.hpp  FileWatchdog.hpp  FilterUtils.hpp  LoggingMacros.hpp  NetbenchOperationHandler.hpp  OperationWorker.hpp  RpcClient.hpp  RpcOperationProcessor.hpp  ServersStatusMonitor.hpp  TestWorkers.hpp
ur-netbench-mann/runtime-configs/: public-servers.json
ur-netbench-mann/src/: CLIUtils.cpp  ConfigManager.cpp  FileWatchdog.cpp  FilterUtils.cpp  NetbenchOperationHandler.cpp  OperationWorker.cpp  RpcClient.cpp  RpcOperationProcessor.cpp  ServersStatusMonitor.cpp  TestWorkers.cpp  main.cpp
ur-netbench-mann/ur-netbench-shared/: CMakeLists.txt
ur-qmi-pack/ur-qmi-ident/: CMakeLists.txt
ur-qmi-pack/ur-qmi-launcher/: CMakeLists.txt  command_logger.cpp  command_logger.h  connection_manager.cpp  connection_manager.h  connection_registry.cpp  connection_registry.h  connection_state_machine.cpp  connection_state_machine.h  connectivity_monitor.cpp  connectivity_monitor.h  failure_detector.cpp  failure_detector.h  interface_controller.cpp  interface_controller.h  ip_monitor.cpp  ip_monitor.h  main.cpp  metrics_reporter.cpp  metrics_reporter.h  multi_connection_support.cpp  qmi_session_handler.cpp  qmi_session_handler.h  recovery_engine.cpp  recovery_engine.h  smart_routing.cpp  smart_routing.h  test_mutex_implementation.cpp  test_new_features.cpp  timeout_config.cpp  timeout_config.h
ur-qmi-pack/ur-qmi-watchdog/: CMakeLists.txt  README.md
ur-vpn-extended/: CLEANUP_TRACKING_SYSTEM.md  CMakeLists.txt  CRASH_FIX_SUMMARY.md  DELETE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  PARSE_IMPLEMENTATION.md  RPC_CLIENT_IMPLEMENTATION_SUMMARY.md  RPC_OPERATIONS_IMPLEMENTATION.md  STATS_LOGGING_CONTROL.md  test_config.ovpn  test_logging  test_logging.cpp  test_wg.conf
ur-vpn-extended/config/: cached-data.json  cleanup-config.json  config.json  master-config-no-stats.json  master-config-openvpn-only.json  master-config-wireguard-only.json  master-config.json  routing-rules.json  ur-rpc-config.json
ur-vpn-extended/docs/: application-layer-routing-integrations.md  openvpn-debug-logging.md  routing-rules-impl-plan.md  stats-macanisms.md  vpn-instance-manager-architecture.md
ur-vpn-extended/src/: cleanup_cron_job.cpp  cleanup_cron_job.hpp  cleanup_tracker.cpp  cleanup_tracker.hpp  cleanup_verifier.cpp  cleanup_verifier.hpp  http_server.cpp  http_server.hpp  main.cpp  openvpn_routing_provider.cpp  openvpn_routing_provider.hpp  vpn_cleanup.cpp  vpn_cleanup.hpp  vpn_instance_manager.cpp  vpn_instance_manager.hpp  vpn_live_data.cpp  vpn_live_data.hpp  vpn_manager_config.cpp  vpn_manager_events.cpp  vpn_manager_lifecycle.cpp  vpn_manager_routing.cpp  vpn_manager_stats.cpp  vpn_manager_utils.cpp  vpn_routing_interface.hpp  vpn_rpc_client.cpp  vpn_rpc_client.hpp  vpn_rpc_operation_processor.cpp  vpn_rpc_operation_processor.hpp  wireguard_routing_provider.cpp  wireguard_routing_provider.hpp
ur-vpn-extended/tests/: README.md  test_add.py  test_delete.py  test_list.py  test_parse.py  test_restart.py  test_start.py  test_stats.py  test_status.py  test_stop.py  test_update.py
ur-vpn-extended/ur-rpc-template/: ur-rpc-template.c
ur-vpn-extended/ur-vpn-parser/: CMakeLists.txt  main.cpp  vpn_parser.cpp  vpn_parser.hpp
(+708 files in other folders)
